samples/_failures_safe/1761005198_637b78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0cb3323.c: In function ‘main’:
./samples/SAFE/__tmp_b0cb3323.c:141:21: error: ‘target’ undeclared (first use in this function)
  141 |                 if (target
      |                     ^~~~~~
./samples/SAFE/__tmp_b0cb3323.c:141:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b0cb3323.c:141:27: error: expected ‘)’ at end of input
  141 |                 if (target
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_b0cb3323.c:141:17: error: expected declaration or statement at end of input
  141 |                 if (target
      |                 ^~
./samples/SAFE/__tmp_b0cb3323.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0cb3323.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0cb3323.c:141:17: error: expected declaration or statement at end of input
